LeanTween Slide in Final Stage

--- a/HackaNav/.vscode/settings.json
+++ b/HackaNav/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "dotnet.defaultSolution": "HackaNav.sln"
+    "dotnet.defaultSolution": "HackaNav.sln",
+    "cSpell.words": [
+        "cada",
+        "página"
+    ]
 }
