Routine tab works
Script checkmarks

--- a/HackaNav/.vscode/settings.json
+++ b/HackaNav/.vscode/settings.json
@@ -2,6 +2,8 @@
     "dotnet.defaultSolution": "HackaNav.sln",
     "cSpell.words": [
         "cada",
-        "página"
+        "lista",
+        "página",
+        "setando"
     ]
 }
